--- a/app.css
+++ b/app.css
@@ -50,14 +50,15 @@ body {
     h1 {
         text-align: center;
         text-shadow: 
-        0 0 5px var(--cShadow),
         0 0 10px var(--cShadow),
-        0 0 15px var(--cShadow),
-        0 0 20px var(--cShadow);
+        0 0 200px var(--cShadow),
+        0 0 30px var(--cShadow),
+        0 0 40px var(--cShadow);
     }
 }
 
 .cont {
+    user-select: none;
     height: 800px;
     display: flex;
     justify-content: center;
@@ -114,6 +115,7 @@ body {
 
 .back {
     margin: 10px 0;
+    user-select: none;
     padding: 10px 20px;
     background-color: var(--cBackgroundGameOne);
     border: 2px solid var(--cShadow);
@@ -133,6 +135,7 @@ body {
 
 .tabContainer {
     height: 750px;
+    user-select: none;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -191,18 +194,22 @@ body {
 .card {
     width: 100%;
     height: 100%;
+    will-change: transform;
     border: 1px solid var(--cBorder);
     border-radius: 5px;
-    p {
-        font-size: 50px;
-        text-align: center;
-        margin-top: 40px ;
+    img {
+        width: 100%;
+        height: 100%;
     }
 }
 
 .cardH {
     background: url('./assets/caed.jpg') no-repeat center / cover;
     border: none;
+}
+
+.inactive {
+    pointer-events: none;
 }
 
 
